@@ -1,3 +1,13 @@
+2013-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	Based on an idea from Christian Ruppert
+	<christian.ruppert@abilis.com>
+
+	* build-all.sh: Add --uclibc-defconfig option, setting
+	UCLIBC_DEFCFG environment variable.
+	* build-uclibc.sh: Use UCLIBC_DEFCFG environment variable to
+	specify defconfig for uClibc.
+
 2013-06-25  Simon Cook  <simon.cook@embecosm.com>
 
 	* tag-release.sh: Use LINUXDIR environment variable.
